envoy/deepwiki_calculator_k8s_gke.yaml
static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 10001
    filter_chains:
      - filters:
        - name: envoy.filters.network.http_connection_manager
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
            stat_prefix: ingress_http
            route_config:
              name: local_route
              virtual_hosts:
              - name: local_service
                domains: ["*"]
                routes:
                - match:
                    path: "/mcp-server1/mcp"
                  route:
                    weighted_clusters:
                      clusters:
                        - name: mcp-server1
                          weight: 100
                          typed_per_filter_config:
                            envoy.filters.http.rbac:
                              "@type": type.googleapis.com/envoy.extensions.filters.http.rbac.v3.RBACPerRoute
                              rbac:
                                rules:
                                  action: ALLOW
                                  policies:
                                    "allow-mcp-session-close":
                                      principals:
                                        # Both of the following conditions must be true for the request to match
                                        - and_ids:
                                            ids:
                                              # Condition 1: The HTTP method must be DELETE
                                              - header:
                                                  name: ":method"
                                                  string_match:
                                                    exact: "DELETE"
                                              # Condition 2: The 'mcp-session-id' header must exist
                                              - header:
                                                  name: "mcp-session-id"
                                                  present_match: true
                                      permissions:
                                        # If the principal (the request's identity) matches, allow it
                                        - any: true
                                    "allow-initialize-and-list-tool":
                                      principals:
                                      - any: true
                                      permissions:
                                      - and_rules:
                                          rules:
                                          - sourced_metadata:
                                              metadata_matcher:
                                                filter: "mcp_proxy"
                                                path:
                                                  - key: "method"
                                                value:
                                                  or_match:
                                                    value_matchers:
                                                    - string_match:
                                                        exact: "initialize"
                                                    - string_match:
                                                        exact: "notifications/initialized"
                                                    - string_match:
                                                        exact: "tools/list"
                                    "rule-0":
                                      principals:
                                      - or_ids:
                                          ids:
                                          - header:
                                              name: "x-user-role"
                                              string_match:
                                                exact: "system:serviceaccount:agent:sa1"
                                      permissions:
                                      - and_rules:
                                          rules:
                                          - sourced_metadata:
                                              metadata_matcher:
                                                filter: "mcp_proxy"
                                                path:
                                                  - key: "method"
                                                value:
                                                  string_match:
                                                    exact: "tools/call"
                                          - sourced_metadata:
                                              metadata_matcher:
                                                filter: "mcp_proxy"
                                                path:
                                                  - key: "params"
                                                  - key: "name"
                                                value:
                                                  or_match:
                                                    value_matchers:
                                                    - string_match:
                                                        exact: "add"
                                                    - string_match:
                                                        exact: "subtract"
                                    "rule-1":
                                      principals:
                                      - or_ids:
                                          ids:
                                          - header:
                                              name: "x-user-role"
                                              string_match:
                                                exact: "system:serviceaccount:agent:sa2"
                                      permissions:
                                      - and_rules:
                                          rules:
                                          - sourced_metadata:
                                              metadata_matcher:
                                                filter: "mcp_proxy"
                                                path:
                                                  - key: "method"
                                                value:
                                                  string_match:
                                                    exact: "tools/call"
                                          - sourced_metadata:
                                              metadata_matcher:
                                                filter: "mcp_proxy"
                                                path:
                                                  - key: "params"
                                                  - key: "name"
                                                value:
                                                  string_match:
                                                    exact: "subtract"
                    prefix_rewrite: "/mcp"
                - match:
                    path: "/mcp-server2/mcp"
                  route:
                    weighted_clusters:
                      clusters:
                        - name: mcp-server2
                          weight: 100
                          typed_per_filter_config:
                            envoy.filters.http.rbac:
                              "@type": type.googleapis.com/envoy.extensions.filters.http.rbac.v3.RBACPerRoute
                              rbac:
                                rules:
                                  action: ALLOW
                                  policies:
                                    "allow-mcp-session-close":
                                      principals:
                                        # Both of the following conditions must be true for the request to match
                                        - and_ids:
                                            ids:
                                              # Condition 1: The HTTP method must be DELETE
                                              - header:
                                                  name: ":method"
                                                  string_match:
                                                    exact: "DELETE"
                                              # Condition 2: The 'mcp-session-id' header must exist
                                              - header:
                                                  name: "mcp-session-id"
                                                  present_match: true
                                      permissions:
                                        # If the principal (the request's identity) matches, allow it
                                        - any: true
                                    "allow-initialize-and-list-tool":
                                      principals:
                                      - any: true
                                      permissions:
                                      - and_rules:
                                          rules:
                                          - sourced_metadata:
                                              metadata_matcher:
                                                filter: "mcp_proxy"
                                                path:
                                                  - key: "method"
                                                value:
                                                  or_match:
                                                    value_matchers:
                                                    - string_match:
                                                        exact: "initialize"
                                                    - string_match:
                                                        exact: "notifications/initialized"
                                                    - string_match:
                                                        exact: "tools/list"
                                    "rule-0":
                                      principals:
                                      - or_ids:
                                          ids:
                                          - header:
                                              name: "x-user-role"
                                              string_match:
                                                exact: "system:serviceaccount:agent:sa2"
                                      permissions:
                                      - and_rules:
                                          rules:
                                          - sourced_metadata:
                                              metadata_matcher:
                                                filter: "mcp_proxy"
                                                path:
                                                  - key: "method"
                                                value:
                                                  string_match:
                                                    exact: "tools/call"
                                          - sourced_metadata:
                                              metadata_matcher:
                                                filter: "mcp_proxy"
                                                path:
                                                  - key: "params"
                                                  - key: "name"
                                                value:
                                                  string_match:
                                                    exact: "read_wiki_structure"
                    prefix_rewrite: "/mcp"
                    # The host header will be rewritten to the upstream's hostname
                    host_rewrite_literal: mcp.deepwiki.com
            http_filters:
            - name: envoy.filters.http.jwt_authn
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.http.jwt_authn.v3.JwtAuthentication
                # Define the token issuers (providers)
                providers:
                  kubernetes_provider:
                    # This MUST match the 'iss' claim in the Kubernetes service account JWT
                    issuer: https://container.googleapis.com/v1/projects/haiyanmeng-gke-dev/locations/us-central1/clusters/cluster-1 # issuer of a GKE cluster
                    remote_jwks:
                      http_uri:
                        # This is the standard K8s OIDC JWKS endpoint
                        uri: https://container.googleapis.com/v1/projects/haiyanmeng-gke-dev/locations/us-central1/clusters/cluster-1/jwks
                        # This cluster must be defined in your static_resources
                        cluster: gke_jwks_cluster
                        timeout: 5s
                      # Cache the keys for 1 hour to avoid spamming the API server
                      cache_duration: 3600s
                    from_headers:
                    - name: x-k8s-sa-token
                    claim_to_headers:
                    - claim_name: sub # example: system:serviceaccount:agent:sa1
                      header_name: x-user-role
                # Define rules for applying the filter
                rules:
                  # This rule applies the JWT check to all incoming requests
                  - match: { prefix: "/" }
                    requires:
                      # Specifies which provider to use for this rule
                      provider_name: kubernetes_provider
            - name: envoy.filters.http.mcp
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.http.mcp.v3.Mcp
            - name: envoy.filters.http.rbac
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.http.rbac.v3.RBAC
            - name: envoy.filters.http.router
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
  - name: mcp-server1
    type: STRICT_DNS
    load_assignment:
      cluster_name: mcp-server1
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: server1-svc.mcp-server-calculator-system.svc.cluster.local
                port_value: 9000
  - name: mcp-server2
    type: LOGICAL_DNS
    load_assignment:
      cluster_name: mcp-server2
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: mcp.deepwiki.com
                port_value: 443
    transport_socket:     # Added this section to enable TLS for HTTPS
      name: envoy.transport_sockets.tls
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
        sni: mcp.deepwiki.com # Server Name Indication is required for TLS handshake
  - name: gke_jwks_cluster
    type: LOGICAL_DNS
    # If your Kubernetes cluster or network does not fully support IPv6, LOGICAL_DNS might resolve to
    # an IPv6 address that Envoy cannot reach, resulting in a 503.
    # Force IPv4 to ensure stability in standard K8s networks
    dns_lookup_family: V4_ONLY
    load_assignment:
      cluster_name: gke_jwks_cluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: container.googleapis.com
                port_value: 443
    # REQUIRED: Transport Socket for TLS (HTTPS)
    transport_socket:
      name: envoy.transport_sockets.tls
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
        sni: container.googleapis.com
        common_tls_context:
          validation_context:
            match_subject_alt_names:
            - exact: container.googleapis.com
            trusted_ca:
              # Check your Docker base image for the correct path
              filename: /etc/ssl/certs/ca-certificates.crt
admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9002
